# sffx

./: CMakeLists.txt  README.md
examples/: main.cpp
include/sffx/: Effects.hpp
include/sffx/Effects/: Bloom.hpp  Blur.hpp  Effect.hpp  EffectPipeline.hpp  MotionBlur.hpp  Nausea.hpp  RegionBased.hpp  Shake.hpp
include/sffx/Particles/: Particle.hpp  ParticleEngine.hpp  ParticleEvent.hpp  ParticleTemplates.hpp
include/sffx/Particles/Utils/: utils.hpp
include/sffx/async/: async.hpp
src/Effects/: Blur.cpp  Effect.cpp  EffectPipeline.cpp  MotionBlur.cpp  Shake.cpp  base_vt.cpp  base_vt.hpp
src/Particles/: Particle.cpp  ParticleEngine.cpp  ParticleTemplates.cpp
src/Particles/Utils/: utils.cpp
src/async/: async.cpp
